--- a/_posts/2021-01-10-regex.md
+++ b/_posts/2021-01-10-regex.md
@@ -1,5 +1,5 @@
 ---
-title: "Post: Quickly Search and Filter Your Text Data with Python's Regular Expression (Regex) Module"
+title: "Quickly Search and Filter Your Text Data with Python's Regex Module"
 excerpt_separator: "<!--more-->"
 date: 2021-01-10T15:34:30-04:00
 categories:
@@ -17,15 +17,19 @@ tags:
 
 ---
 
-Whether you are a product manager, a business development manager, a user researcher, or any other role in this all-things-digital age, efficiently processing raw data to **generate insights** has become a crucial skillset. 
+Whether you are a product manager, a business development manager, a user researcher, or any other role in this all-things-digital age, it has become extremely common that we have to efficiently process raw data to **generate insights**.
 
-Be it a simple text file, perhaps a scanned pdf, at times we just use the built in find/ search functions, mannually skimming throught the matched items with our eysballs, copy-pasting the pieces we find useful to another documents, making some mistakes and doing this all over again.
+Be it a .csv or a .txt file, it could always be a daunting task- we used the built-in search functions, got a dozens (or perhaps hundreds) of matches, manually skimmed through the matched items with our eysballs, spotted and copy-pasted the useful pieces. 
 
-It does not have to be that way. It really doesn't. With some simple Python scripts, you can easily extract the desirable pieces and never miss a thing. 
+What's happened next? Some mistakes were made, or perhaps we just wanted to look up slightly differently- we started over, doing the task all over again.
+
+### The power of regex
+
+It does not have to be that way.  With some simple Python scripts, you can easily extract the desirable pieces and never miss a thing. 
 
 Regular expression, known as regex, is a sequence of characters that specifies a search pattern. Very often, these patterns are used to validate, find and replace input text-string related data.
 
-You can write a minial function with just a few lines of code, it will then scan through your documents and help you manage search results at ease. Such a powerful technique!
+You can write a minial function with just a few lines of Python code, it will then scan through your documents and help you manage search results at ease. Such a powerful technique!
 
 **NOTE**
 
@@ -43,7 +47,7 @@ Here's an example text string:
 
 `"John was initially the group's de facto leader, a role gradually ceded to Paul. from 1968 to 1972, he produced more than a dozen records with Yoko, including a trilogy of avant-garde albums."`
 
-```
+```python
 import re
 
 sample_text = "Lennon was initially the group's de facto leader, a role gradually ceded to McCartney. from 1968 to 1972, he produced more than a dozen records with Ono, including a trilogy of avant-garde albums."
@@ -55,7 +59,7 @@ print(matched_results)
 
 ```
 Result:
-```
+```python
 ['John', 'Paul', 'Yoko']
 ```
 
@@ -64,7 +68,7 @@ Result:
 
 Combine with `open()` and `read()` method, you can perform searching in text files:
 
-```
+```python
 with open ("filepath/filename.extention", "r") as file:
     txt_obj = file.read()
 
@@ -82,7 +86,7 @@ Let's see another example of how we can incorporate regex functions to transform
 
 First, let's take a look at Python's list comprehension expression. It makes data transformation as simple as one line of code:
 
-```
+```python
 new_list = [item.someMethod() for item in old_list]
 ```
 
@@ -92,7 +96,7 @@ Let's day we have a log file of user behavior data, and we have to extract the u
 
 We can first design a pattern with 2 regex expression groups using (?P):
 
-```
+```python
 pattern = "((?P<user_name>\w*|-)(\s)(\[(?P<timestamp>.+)\])(\s))" 
 
 result = [item.groupdict() for item in re.finditer(pattern, txt_obj)]
@@ -105,16 +109,16 @@ Note that during handling from `.groupdic()`, the `<tag_name>` will become keys 
 
 An regex pattern testing tool with a table of commonly used patterns- you can mix and match the patterns to see how things work:
 
-http://www.pyregex.com
+<http://www.pyregex.com>
 
 If you want to understand more about each expression, this blogpost from Dataquest comes in handy:
 
-https://www.dataquest.io/blog/regex-cheatsheet/
+<https://www.dataquest.io/blog/regex-cheatsheet/>
 
 To explore all the other methods in the `re` module, here's the official documentaion: 
 
-https://docs.python.org/3/library/re.html
+<https://docs.python.org/3/library/re.html>
 
-Going further- this is another regex testing tool, you can see how regex is used across different languages (e.g. PHP/ Java). You can also find the explanations of different patterns on the reference panels.
+Going further- this is another regex testing tool, you can see how regex is used across different languages (e.g. PHP/ Java). You can also find the explanations of different patterns on the reference panels:
  
-https://regex101.com
+<https://regex101.com>
